Bug 1006285: make MediaCodec bitrate setting work for KitKat-based builds r=jhlin